adjusted card two colors

--- a/src/components/Cards_section/Cards_section.css
+++ b/src/components/Cards_section/Cards_section.css
@@ -64,3 +64,11 @@
 .cardtwo .cards_icon_container{
     background-color: #FFFFFF;
 }
+
+.cardtwo .cards_title{
+    color: #FFFFFF;
+}
+
+.cardtwo .cards_paragraph{
+    color: #ffffff;
+}
